objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>AdmissionDate__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admission_Day__c</fullName>
        <formula>CASE(
  MOD( AdmissionDate__c - DATE(1900, 1, 7), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;,
  6, &quot;Saturday&quot;,
  &quot;Unknown&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassGrade__c</fullName>
        <label>Class/Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I-Class</fullName>
                </value>
                <value>
                    <fullName>II-Class</fullName>
                </value>
                <value>
                    <fullName>III-Class</fullName>
                </value>
                <value>
                    <fullName>IV-Class</fullName>
                </value>
                <value>
                    <fullName>V-Class</fullName>
                </value>
                <value>
                    <fullName>VI-Class</fullName>
                </value>
                <value>
                    <fullName>VII-Class</fullName>
                </value>
                <value>
                    <fullName>VIII-Class</fullName>
                </value>
                <value>
                    <fullName>IX-Class</fullName>
                </value>
                <value>
                    <fullName>X-Class</fullName>
                </value>
                <value>
                    <fullName>XI-Class</fullName>
                </value>
                <value>
                    <fullName>XII-Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentName__c</fullName>
        <label>Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentsEmail__c</fullName>
        <label>Parent&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RollNumber__c</fullName>
        <label>Roll Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>Student Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Prevent_Admission_on_Saturday_or_Sunday</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  MOD( AdmissionDate__c - DATE(1900, 1, 7), 7 ) = 0,   /* Sunday */
  MOD( AdmissionDate__c - DATE(1900, 1, 7), 7 ) = 6    /* Saturday */
)</errorConditionFormula>
        <errorMessage>Admission Date cannot be on a Saturday or Sunday.</errorMessage>
    </validationRules>
</CustomObject>